Fix global namespaces dropdown loading styles
With the move to Carbon 11 the ComboBox and Dropdown skeleton states
have changes, and the component props are slightly different.

Remove the obsolete `inline` prop, and update the styles to account
for the updated components to prevent the loading styles overflowing
the header and causing a layout shift on other pages too.

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -95,6 +95,10 @@ body {
   margin-inline-start: 16rem;
 }
 
+.#{$prefix}--header .#{$prefix}--list-box__wrapper:has(.#{$prefix}--list-box.#{$prefix}--skeleton) {
+  inline-size: 245px;
+}
+
 .#{$prefix}--modal-header,
 .#{$prefix}--modal-content {
   inline-size: 100%;
